feat: package restructure with backward compatibility and error handling
This PR implements the package restructuring (PR1) with critical error
handling improvements added for production resilience.

## Package Structure & Backward Compatibility

### New Package Structure
- Moved all modules to `agentproxy/` package directory
- Created `pyproject.toml` with entry points for `pa` and `pa-server`
- Added `agentproxy/__init__.py` with proper exports
- Added `agentproxy/__main__.py` for module execution

### Backward Compatibility (CRITICAL)
- **cli.py** - Shim for old `python cli.py` entry point
- **server.py** - Shim for old `python server.py` entry point
- All old entry points continue to work without modification
- New entry points available after `pip install -e .`:
  - `pa` command
  - `pa-server` command
  - `python -m agentproxy`
  - `python -m agentproxy.server`

### Tests (29 passing)
- **tests/test_baseline_compatibility.py** - 23 tests covering:
  - Old entry points (python cli.py, python server.py)
  - New entry points (pa, pa-server, python -m agentproxy)
  - Package imports and structure
  - Core components
- **tests/unit/test_gemini_error_handling.py** - 4 unit tests
- **tests/integration/test_integration_error_handling.py** - 2 integration tests

## Gemini Error Handling & Resilience (Critical Addition)

### Problem Solved
Previous implementation had no retry logic or error recovery, causing:
- Lost instruction context during transient API errors
- Abrupt failures on rate limits or network issues
- No graceful degradation

### Solution Implemented

#### 1. Retry Logic with Exponential Backoff (gemini_client.py)
- **GeminiAPIError** exception with retry metadata
- Automatic retry on 5xx errors (max 3 attempts)
- Exponential backoff: 1s, 2s, 4s
- No retry on 4xx client errors (won't succeed)
- Structured error messages for upstream handling

#### 2. Error Recovery & Context Preservation (pa_agent.py)
- Track consecutive errors (resets on success)
- **Firs

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ dist/
 
 # Sandbox directories
 sandbox/
+.agentproxy-plans/
+
+# Test files should be in tests/ directory only
+/test_*.py
+
+# Documentation should be in docs/ directory only
+/PHASE*.md
+/SECURITY_FIX*.md
+/GEMINI*.md
+/*_SUMMARY.md
+/*_COMPLETE.md
+/*_FIX*.md
